deploy/mpg/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mpg
spec:
  selector:
    matchLabels:
      app: mpg
  replicas: 2
  template:
    metadata:
      labels:
        app: mpg
    spec:
      containers:
        - name: mpg
          image: hashicorp/http-echo
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
          args:
            - "-text=mpg"
          ports:
            - containerPort: 5678
