deploy/mpg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mpg
spec:
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: mpg
