deploy/mpg/stage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stage-mpg
spec:
  ports:
    - port: 80
      targetPort: 4000
  selector:
    app: stage-mpg
